# Finance_Accounting

./: CMakeLists.txt  README.md
src/: main.cpp
src/UI/: ConsoleUI.h
src/domain/: BankAccount.h  Category.h  IEntity.h  IValidator.h  Operation.h  Validator.h
src/patterns/: AccountBalanceObserver.h  BankAccountValidationStrategy.h  CategoryValidationStrategy.h  CommandManager.h  DomainFactory.h  IOperationObserver.h  IValidationStrategy.h  OperationBuilder.h  OperationNotifier.h  OperationValidationStrategy.h  RepositoryCaretaker.h  ValidationContext.h
src/patterns/commands/: AddOperationCommand.h  DeleteOperationCommand.h  EditOperationCommand.h  ICommand.h  SnapshotCommand.h  TimedCommand.h
src/patterns/facades/: BankAccountFacade.h  CategoryFacade.h  OperationFacade.h
src/repository/: CommonInMemoryRepository.h  IRepository.h  InMemoryRepository.h
src/utils/: Helpers.h  OperationType.h  Status.h
